SalesforceData/src/objects/Client__c.object
<CustomObject>
    <fields>
        <fullName>Client_Code__c</fullName>
        <displayFormat>CL{0000}</displayFormat>
        <label>Client Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Point_Of_Contact__c</fullName>
        <label>Point Of Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Client</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>